k8s/deploy/featuretest/hello-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: hello
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      run: hello
  template:
    metadata:
      labels:
        run: hello
    spec:
      containers:
      - image: hello:local
        args: ["app"]
        name: hello
        ports:
        - containerPort: 50000
