k8s/deploy/featuretest/api-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: go-api-gateway
  name: go-api-gateway
spec:
  ports:
  - name: grpc
    protocol: TCP
    port: 9001
    targetPort: 9001
    nodePort: 32101
  - name: http
    protocol: TCP
    port: 9002
    targetPort: 9002
    nodePort: 32102
  - name: trace
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 32103
  selector:
    run: go-api-gateway
  type: NodePort
