k8s/deploy/featuretest/ingress-api.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-api-gateway
spec:
  backend:
    serviceName: go-api-gateway
    servicePort: 9001
